# dotfiles

dotfile_setup/: hammerspoon_setup.zsh
hammerspoon/: init.lua
hammerspoon/old_inits/: old_init.lua
reference/python_setup/: pyproject.toml
zsh_omz/: .gitignore  aliases.zsh  fzf.zsh  old_zshrc_configs.txt  package_plugin_setup.zsh  packages.zsh  personal.zsh  personal_zsh_configs.zsh  setup.zsh  zshrc  zshrc.old  zshrc.zwc
