# Sample pyproject.toml

# UV Project (see elsewhere for poetry version)
[project]
name = "transcriber" #TODO: Change name
version = "v0.1.0" #TODO: Change version
description = "A server for transcribing audio streams using Deepgram" #TODO: Change description
authors = [{name="Dan Thompson", email="danielrthompsonjr@gmail.com"}, {name="Ollie Khakwani", email="okhakwani@gmail.com"}]
license = {text = "All Rights Reserved"}
readme = "README.md"
requires-python = "==3.12.6" #TODO: Change python version
dependencies = []

# Build system (optional)

# TODO: Decide if I need a build system
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# Dev dependencies
[tool.uv]
dev-dependencies = []

# Linting configs
[tool.pyright]
include = ["src", "tests"] # TODO: Change include
exclude = ["**/node_modules", "**/__pycache__"] # TODO: Change exclude
pythonVersion = "3.12" # TODO: Change python version
pythonPlatform = "Darwin"
typeCheckingMode = "standard"
reportMissingImports = true

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["your_project_name"]